--- a/style/travel.css
+++ b/style/travel.css
@@ -103,6 +103,11 @@ nav li{
 
 
 }
+.action .box{
+    text-align: center;
+    
+
+}
 .btn{
     width: 174px;
     height: 52px;
@@ -159,13 +164,12 @@ nav li{
 }
 .title-2{
     color: #131318;
-
-    
     font-family: Mulish;
     font-size: 40px;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
+    text-align: center;
 }
 .description p{
     width: 577px;
@@ -228,6 +232,240 @@ nav li{
     margin-left: 10%;
 
 }
+
+.contact{
+    text-align: center;
+}
+.contact p{
+    color: rgba(19, 19, 24, 0.70);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px; 
+    max-width: 540px;
+    margin-left: 32%;
+}
+/* details */
+.details{
+    display: flex;
+    justify-content: space-between;
+    max-width: 1170px;
+    margin-left: 10%;
+    margin-top: 48px;
+    
+
+}
+.details img{
+    width: 64px;
+    height: 64px;
+    flex-shrink: 0;
+    margin-bottom: 32px;
+    margin-top: 32px;
+    margin-left: 32px;
+
+
+}
+.hotel{
+    width: 573px;
+    height: 284px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+}
+.details h2{
+    color: #131318;
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 16px;
+    margin-left: 32px;
+}
+.details p{
+    width: 486px;
+    color: #5A5A5D;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-left: 32px;
+
+}
+.map{
+    width: 573px;
+    height: 284px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    background: rgba(41, 206, 246, 0.05);
+}
+.price{
+    width: 573px;
+    height: 284px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: 1px solid rgba(233, 68, 68, 0.20);
+    background: rgba(233, 68, 68, 0.05);
+    margin-left: 30%;
+    margin-top: 24px;
+    margin-bottom: 100px;
+}
+.price img{
+    width: 64px;
+    height: 64px;
+    flex-shrink: 0;
+    margin-bottom: 32px;
+    margin-top: 32px;
+    margin-left: 32px;
+
+
+}
+.price h2{
+    color: #131318;
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 16px;
+    margin-left: 32px;
+
+    
+}
+.price p{
+    width: 486px;
+    color: #5A5A5D;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-left: 32px;
+
+}
+/* deals and discount styles */
+.sales p{
+    width: 643px;
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; 
+    margin-left: 28%;
+    margin-bottom: 48px;
+    
+}
+.discount {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 250px;
+    
+    
+}
+.logo-2{
+    position: absolute;
+    top: 46%;
+    left: 48%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 579px;
+    height: 389px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px);
+    margin: 28px 56px 55px 260px; 
+    display: flex;
+    justify-content: space-around;
+}
+.tour{
+    position: absolute;
+    top: 55%;
+    left: 67%;
+    transform: translate(-50%, -50%);
+}
+.para{
+    color: #5A5A5D;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+.tour h2{
+    color: #131318;
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+.button{
+    width: 150px;
+    height: 52px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FF5400;
+    text-align: center;
+    color: #FFF;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    
+}
+.pri{
+    color: #FF5400;
+
+    font-family: Mulish;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+.discount-2{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 250px;
+    margin-right: 50px;
+}
+.logo-3{
+    position: absolute;
+    top: 46%;
+    left: 48%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 579px;
+    height: 389px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px);
+    margin: 28px 56px 55px 260px; 
+    display: flex;
+    justify-content: space-around;
+}
+.tour-2{
+    position: absolute;
+    top: 55%;
+    left: 67%;
+    transform: translate(-50%, -50%);
+}
+
+
+
+
+
 
 
 
